--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "jquery": "^3.6.3",
+    "jwt-decode": "^3.1.2",
     "ngx-print": "^1.3.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
